--- a/index.html
+++ b/index.html
@@ -23,15 +23,8 @@
 <body>
 <div id="map"></div>
     <script>
-      var map;
-      function initMap() {
-        map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: 33.247875, lng: -83.441162},
-          zoom: 8
-        });
-      }
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjF7ewJ0a-_jKTpb0a4UllztzD4E1184U&callback=initMap"
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjF7ewJ0a-_jKTpb0a4UllztzD4E1184U&callback=get_voting_locations"
     async defer></script>
 
 </body>
