--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         justify-content: space-around;
         align-items: center;
         background: #4285F4;
+        overflow: hidden;
       }
       /* Optional: Makes the sample page fill the window. */
       html, body {
@@ -48,7 +49,6 @@
               <input type="text" id="longitude" name="longitude"><br>
             </form>
             <button type="button" onclick="moveMap()">Submit</button>
-
         </div>
     </div>
     <div id="map"></div>
