Use geometry library.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
     </div>
     <div id="map"></div>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjF7ewJ0a-_jKTpb0a4UllztzD4E1184U&callback=get_voting_locations"
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjF7ewJ0a-_jKTpb0a4UllztzD4E1184U&libraries=geometry&callback=get_voting_locations"
     async defer></script>
 
 </body>
