--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 </head>
 <body>
     <div id="options">
+        <h1>Where can I vote early in Georgia's Primary Elections?</h1>
+        <p>Simply enter your location below and submit to view the closest 3 early voting locations near you! Click on any polling place marker to view its title, address, and availability.</p>
         <div>
             <button type="button" onclick="get_coordinates()" id="GetLocation">Check my location</button>
              <form id="coordinates">
@@ -50,6 +52,10 @@
             </form>
             <button type="button" onclick="moveMap()">Submit</button>
         </div>
+
+        <p><i>For best results, we recommend using this site on a mobile device with a wide screen orientation.</i></p>
+        <p>All data for polling locations was fetched from  Georgia's <a href="https://www.mvp.sos.ga.gov/MVP/mvp.do">My Voter Page</a>.</p>
+        <p><small>This website is a personal project by <a href="https://www.linkedin.com/in/dalton-nickerson/">Dalton Nickerson</a> and is not affiliated with any government agency or group.</small></p>
     </div>
     <div id="map"></div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjF7ewJ0a-_jKTpb0a4UllztzD4E1184U&libraries=geometry&callback=get_voting_locations"
