--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         display: flex;
         flex-grow:1;
         height: 100%;
+        width: 20%;
         flex-direction: column;
         justify-content: space-around;
         align-items: center;
