--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         background: darkgray;
       }
       #options{
+        padding: 5%;
         display: flex;
         flex-grow:1;
         height: 100%;
