Adjust background color.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         flex-direction: column;
         justify-content: space-around;
         align-items: center;
-        background: #4285F4;
+        background: #4b91fa;
         overflow: hidden;
       }
       /* Optional: Makes the sample page fill the window. */
