Adjust options box sizing.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         align-items: center;
         background: #4b91fa;
         overflow: hidden;
+        box-sizing: border-box;
       }
       /* Optional: Makes the sample page fill the window. */
       html, body {
