--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
         justify-content: space-around;
         align-items: center;
         background: #4b91fa;
-        overflow: hidden;
         box-sizing: border-box;
-        overflow: hidden;
+        overflow: scroll;
       }
       #options-button{
           display: none;
