--- a/index.html
+++ b/index.html
@@ -17,17 +17,19 @@
         background: darkgray;
       }
       #options{
-        padding: 5%;
+        padding: 10%;
         display: flex;
         flex-grow:1;
         height: 100%;
-        width: 20%;
+        flex-basis: 20rem;
         flex-direction: column;
-        justify-content: space-around;
+        justify-content: safe center;
+        align-self: safe center;
         align-items: center;
         background: #4b91fa;
         box-sizing: border-box;
         overflow: scroll;
+        margin: auto;
       }
       #options-button{
           display: none;
