--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
               <input type="text" id="latitude" name="latitude"><br>
               <label for="longitude">Longitude:</label><br>
               <input type="text" id="longitude" name="longitude"><br>
+              <label for="countySelect">County:</label><br>
+              <select id="countySelect">
+                  <option value="Any" onselect="filterMarkersByCounty()">Any</option>
+              </select>
             </form>
             <button class="btn btn-light btn-block" type="button" onclick="moveMap()">Submit</button>
         </div>
