--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <body>
     <button id="options-button" class="btn btn-primary" onclick="toggleOptions()">Menu</button>
     <div id="options">
-        <h1>Where can I vote early in Georgia's Primary Elections?</h1>
+        <h1>Where can I vote early in Georgia's General Election?</h1>
         <ul>
             <li>Click on any polling place marker to view its title, address, and availability.</li>
             <li>Select a county to view all early voting locations in that county.</li>
@@ -89,7 +89,7 @@
 
         <p><i>For best results, we recommend using this site on a mobile device with a wide screen orientation.</i></p>
         <p>All data for polling locations was fetched from  Georgia's <a href="https://www.mvp.sos.ga.gov/MVP/mvp.do">My Voter Page</a>.</p>
-        <p><small>This website is a personal project by <a href="https://www.linkedin.com/in/dalton-nickerson/">Dalton Nickerson</a> and is not affiliated with any government agency or group. This page was last updated on October 2, 2020.</small></p>
+        <p><small>This website is a personal project by <a href="https://www.linkedin.com/in/dalton-nickerson/">Dalton Nickerson</a> and is not affiliated with any government agency or group. This page was last updated on October 6, 2020.</small></p>
     </div>
     <div id="map"></div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjF7ewJ0a-_jKTpb0a4UllztzD4E1184U&libraries=geometry&callback=get_voting_locations"
