--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="UTF-8">
     <title>Where can I vote early in Georgia?</title>
+    <script src='https://unpkg.com/maplibre-gl@latest/dist/maplibre-gl.js'></script>
+    <link href='https://unpkg.com/maplibre-gl@latest/dist/maplibre-gl.css' rel='stylesheet'/>
 </head>
 <body>
+<div id='map' style='width: 400px; height: 300px;'></div>
 </body>
 </html>
