--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Where can I vote early in Georgia?</title>
     <script src='https://unpkg.com/maplibre-gl@latest/dist/maplibre-gl.js'></script>
     <link href='https://unpkg.com/maplibre-gl@latest/dist/maplibre-gl.css' rel='stylesheet'/>
+    <script type="module" src='./js/app.js'></script>
 </head>
 <body>
 <div id='map' style='width: 400px; height: 300px;'></div>
