--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script type="module" src='./js/app.js'></script>
 </head>
 <body>
+<select id='countySelect'>
+</select>
 <div id='map' style='width: 800px; height: 600px;'></div>
 <div id='pollingPlaceInfo'></div>
 </body>
