--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 <select id='countySelect'></select>
 <select id='scenarioSelect'></select>
+<select id='dateSelect'></select>
 <div id='map' style='width: 800px; height: 600px;'></div>
 <div id='pollingPlaceInfo'></div>
 </body>
