Add labels to selections.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
     <script type="module" src='./js/app.js'></script>
 </head>
 <body>
-<select id='countySelect'></select>
-<select id='scenarioSelect'></select>
-<select id='dateSelect'></select>
-<div id='map' style='width: 800px; height: 600px;'></div>
-<div id='pollingPlaceInfo'></div>
+<div>
+    <label for='countySelect'>County:</label><select id='countySelect'></select>
+    <label for='scenarioSelect'>Time:</label><select id='scenarioSelect'></select>
+    <label for='dateSelect'>Day:</label><select id='dateSelect'></select>
+</div>
+<div>
+    <div id='map' style='width: 800px; height: 600px;'></div>
+    <div id='pollingPlaceInfo'></div>
+</div>
 </body>
 </html>
