--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="UTF-8">
-    <title>Where can I vote early in Georgia?</title>
+    <title>Georgia Early Voting Locations</title>
     <script src='https://unpkg.com/maplibre-gl@latest/dist/maplibre-gl.js'></script>
     <link href='https://unpkg.com/maplibre-gl@latest/dist/maplibre-gl.css' rel='stylesheet'/>
     <script type="module" src='./js/app.js'></script>
 </head>
 <body>
+<h1>Georgia Early Voting Locations</h1>
 <div>
     <label for='countySelect'>County:</label><select id='countySelect'></select>
     <label for='scenarioSelect'>Time:</label><select id='scenarioSelect'></select>
