Link to GitHub issues page for corrections.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="UTF-8">
@@ -18,6 +18,15 @@
 <div>
     <div id='map' style='width: 800px; height: 600px;'></div>
     <div id='pollingPlaceInfo'></div>
+</div>
+<div id="info">
+    Data for polling places was fetched from the <a
+        href="https://mvp.sos.ga.gov/s/advanced-voting-location-information">Georgia Secretary of State's Advance Voting
+    Location Information tool</a>.
+    <p>This tool is not affiliated with any government agency or group. This page was last updated on October 13, 2024.
+        Please direct all questions, suggestions, or corrections to the project's <a
+                href=index.htmlhttps://github.com/Thisisnotdalton/GeorgiaVotingLocations/issues">GitHub Issues page</a>.
+    </p>
 </div>
 </body>
 </html>
