--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     Location Information tool</a>.
     <p>This tool is not affiliated with any government agency or group. This page was last updated on October 13, 2024.
         Please direct all questions, suggestions, or corrections to the project's <a
-                href=index.htmlhttps://github.com/Thisisnotdalton/GeorgiaVotingLocations/issues">GitHub Issues page</a>.
+                href="https://github.com/Thisisnotdalton/GeorgiaVotingLocations/issues">GitHub Issues page</a>.
     </p>
 </div>
 </body>
