--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <script src='https://unpkg.com/maplibre-gl@latest/dist/maplibre-gl.js'></script>
     <link href='https://unpkg.com/maplibre-gl@latest/dist/maplibre-gl.css' rel='stylesheet'/>
+    <script src="https://cdn.jsdelivr.net/npm/@turf/turf@7/turf.min.js"></script>
     <script type="module" src='./js/app.js'></script>
 </head>
 <body class="poppins-medium">
